# SecuraFolder

./: Cargo.toml  README.md  build.rs
src/: encryption.rs  lib.rs  license.rs  main.rs
ui/: window.slint
