[package]
name = "securafolder"
version = "0.1.0"
edition = "2024"

build = "build.rs"

default-run = "securafolder"

[features]
limited = []
default = ["limited"]

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash"] }
blake3 = "1.5.5"
chacha20poly1305 = "0.10.1"
fs_extra = "1.3.0"
hex = "0.4.3"
license-key = "0.1.0"
rand = "0.8.5"
sha2 = "0.10.8"
slint = "1.9.2"
threadpool = "1.8.1"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.9.2"
winres = "0.1.12"

[package.metadata.bundle.bin.securafolder]
icon = ["ui/assets/SecuraFolder.ico"]
